Fix: Move all files to root and update links

--- a/project1/index.html
+++ b/project1/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-dark bg-dark px-3">
         <span class="navbar-brand mb-0 h1">Project 1 Demo</span>
-        <a href="../../index.html" class="btn btn-outline-light btn-sm">Back to Portfolio</a>
+        <a href="../index.html" class="btn btn-outline-light btn-sm">Back to Portfolio</a>
     </nav>
     <div class="pdf-container">
         <iframe src="project1_v2.pdf">
