Update View Code buttons to link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Project 1</h5>
                             <p class="card-text">A brief description of Project 1. This project demonstrates basic HTML structure and text formatting.</p>
-                            <a href="#" class="btn btn-outline-primary btn-sm">View Code</a>
+                            <a href="https://github.com/ryu-crypto/ELECTIVE_FINAL/tree/main/project1" target="_blank" class="btn btn-outline-primary btn-sm">View Code</a>
                             <a href="project1/index.html" class="btn btn-primary btn-sm">Live Demo</a>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Project 2</h5>
                             <p class="card-text">A brief description of Project 2. This project showcases CSS styling and layout techniques.</p>
-                            <a href="#" class="btn btn-outline-primary btn-sm">View Code</a>
+                            <a href="https://github.com/ryu-crypto/ELECTIVE_FINAL/tree/main/project2" target="_blank" class="btn btn-outline-primary btn-sm">View Code</a>
                             <a href="project2/index.html" class="btn btn-primary btn-sm">Live Demo</a>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Project 3</h5>
                             <p class="card-text">A brief description of Project 3. This project involves basic JavaScript interactivity.</p>
-                            <a href="#" class="btn btn-outline-primary btn-sm">View Code</a>
+                            <a href="https://github.com/ryu-crypto/ELECTIVE_FINAL/tree/main/project3" target="_blank" class="btn btn-outline-primary btn-sm">View Code</a>
                             <a href="project3/index.html" class="btn btn-primary btn-sm">Live Demo</a>
                         </div>
                     </div>
